frontend: fixed a color theme bug in dark mode

--- a/frontend/src/components/App.module.css
+++ b/frontend/src/components/App.module.css
@@ -50,9 +50,7 @@
     --shadow-color: #0008;
 
     &[data-theme="light"] {
-        :root {
-            color-scheme: light;
-        }
+        color-scheme: light;
 
         --bg-0: hsl(35, 35%, 98%);
         --bg-1: hsl(35, 30%, 90%);
@@ -80,9 +78,7 @@
     }
 
     &[data-theme="dark"] {
-        :root {
-            color-scheme: dark;
-        }
+        color-scheme: dark;
 
         --bg-0: hsl(35, 10%, 15%);
         --bg-1: hsl(35, 10%, 30%);
@@ -110,6 +106,10 @@
 
     & div {
         box-sizing: border-box;
+    }
+
+    & input {
+        color: var(--fg-0);
     }
 
     &.disableTransparency {
